adding FX.html as link and the edit the display

--- a/public/split.css
+++ b/public/split.css
@@ -64,3 +64,25 @@
   #base , #quote {
    text-transform: uppercase;
   }
+
+  button {
+
+    margin: 15px auto 0;
+    padding: 3px 20px;
+
+   
+    font-size: 14px;
+    text-align: center;
+    border : 1px solid #2C3539;
+    text-transform: uppercase;
+    /* text-decoration: none; */
+    /* outline: none; */
+}
+
+button:hover {
+    transition: 0.5s;
+    background-color: #8458B3;
+    color: #e5eaf5;
+    text-decoration: underline;
+    letter-spacing: 0.5px;
+}
